--- a/apple-pie/index.html
+++ b/apple-pie/index.html
@@ -4,18 +4,43 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Apple Pie Recipe</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
-    Apple Pies This was my grandmother's apple pie recipe. I have never seen another one quite like it. It will always
-    be my favorite and has won me several first place prizes in local competitions. I hope it becomes one of your
-    favorites as well! Ingredients 1 recipe pastry for a 9 inch double crust pie 1/2 cup unsalted butter 3 tablespoons
-    all-purpose flour 1/4 cup water 3 tablespoons all-purpose flour 1/4 cup water 1/2 cup white sugar 1/2 cup packed
-    brown sugar 8 Granny Smith apples - peeled, cored and sliced Directions Preheat oven to 425 degrees F (220 degrees
-    C). Melt the butter in a saucepan. Stir in flour to form a paste. Add water, white sugar and brown sugar, and bring
-    to a boil. Reduce temperature and let simmer. Place the bottom crust in your pan. Fill with apples, mounded
-    slightly. Cover with a lattice work crust. Gently pour the sugar and butter liquid over the crust. Pour slowly so
-    that it does not run off. Bake 15 minutes in the preheated oven. Reduce the temperature to 350 degrees F (175
-    degrees C). Continue baking for 35 to 45 minutes, until apples are soft.
+    <main>
+      <article id="fundo_comeco">
+        <h1 id="fundo_comeco_h1">Apple Pies</h1>
+      </article>
+
+      <article class="conteudo">
+        <p id="conteudo_p" class="conteudo_margin_bottom">This was my grandmother's apple pie recipe. I have never seen another one quite like it. It will always be my favorite and has won me several first place prizes in local competitions. I hope it becomes one of your favorites as well!</p>
+        <div class="conteudo_img">
+          <img src="images/recipe-info.png" alt="recipe-info" class="conteudo_margin_bottom">
+        </div>
+      </article>
+      
+      <article class="conteudo">
+        <h2 class="conteudo-h2  conteudo_margin_bottom conteudo_margin_top">Ingredients</h2>
+        <p>- 1 recipe pastry for a 9 inch double crust pie</p>
+        <p>- 1/2 cup unsalted butter</p>
+        <p>- 3 tablespoons all-purpose flour</p>
+        <p>- 1/4 cup water</p>
+        <p>- 3 tablespoons all-purpose flour</p>
+        <p>- 1/4 cup water</p>
+        <p>- 1/2 cup white sugar</p>
+        <p>- 1/2 cup packed brown sugar</p>
+        <p class="conteudo_margin_bottom">- 8 Granny Smith apples - peeled, cored and sliced</p>
+        <div class="conteudo_img">
+          <img src="images/cooking-info.png" alt="cooking-info" class="conteudo_margin_bottom">
+        </div>
+      </article>
+
+      <article class="conteudo">
+        <h2 class="conteudo-h2 conteudo_margin_bottom conteudo_margin_top">Directions</h2>
+        <p>1) Preheat oven to 425 degrees F (220 degrees C). Melt the butter in a saucepan. Stir in flour to form a paste. Add water, white sugar and brown sugar, and bring to a boil. Reduce temperature and let simmer.</p>
+        <p>2) Place the bottom crust in your pan. Fill with apples, mounded slightly. Cover with a lattice work crust. Gently pour the sugar and butter liquid over the crust. Pour slowly so that it does not run off.</p>
+        <p>3) Bake 15 minutes in the preheated oven. Reduce the temperature to 350 degrees F (175 degrees C). Continue baking for 35 to 45 minutes, until apples are soft.</p>
+      </article>
+    </main>
   </body>
 </html>
